--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,19 +7,19 @@
   <title>Quarantinee | Welcome</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
   <link rel="stylesheet" href="../public/stylesheets/style.css">
-  <script src="/js/login.js"></script>
-  <script src="/js/members.js"></script>
-  <script src="/js/signup.js"></script>
 </head>
 
 <body>
   {{{ body }}}
 </body>
 
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
 <script>
   $(document).foundation();
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+  <script src="/js/login.js"></script>
+  <script src="/js/members.js"></script>
+  <script src="/js/signup.js"></script>
 
 </html>
