--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,45 @@
 form.signup,
 form.login {
-  margin-top: 50px;
+  margin-top: 20px;
+}
+
+.top-bar,
+.top-bar ul {
+  background-color: black;
+}
+
+#title-site {
+  padding-left: 12%;
+}
+
+body {
+  background-color: #23272a;
+}
+
+.feed-page {
+  padding-left: 30%;
+  padding-right: 30%;
+}
+
+
+.form-control,
+.searchbox-input {
+  background-color: #2c2f33;
+}
+
+h2,
+label {
+  color: #7289da;
+}
+
+#signup-form,
+#login-form {
+  padding-left: 30%;
+  padding-right: 30%;
+}
+
+
+a {
+  color: #7289da;
+
 }
