--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,4 +1,5 @@
 <div class="quarantineApp">
+  <!-- Begin nav bar -->
 
   <div class="title-bar-left">
     <div class="top-bar">
@@ -27,9 +28,12 @@
         <h2>Quarantinee</h2>
       </div>
     </div>
-
-
   </div>
+
+  <!-- End nav bar-->
+
+  <!--Start of App here-->
+  <!-- Authorize Twitch-->
 
   <div class="container">
     <div class="row">
@@ -40,80 +44,86 @@
     </div>
   </div>
 
-  <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-    <ul class="orbit-container">
-      <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
-          Slide</span>&#9664;</button>
-      <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
-      <li class="orbit-slide is-active">
-        <img src="https://placehold.it/2000x750" height="50%" width="2000px">
-      </li>
-    </ul>
-  </div>
-
-  <!--Here the recent feed of posts can be displayed, ill update the css to hold the posts-->
-  <h2 class="text-center">Add a Post!</h2>
-
-  <form class="create-form text-center">
-
-    <div class="form-group">
-      <label for="auth">Author:</label>
-      <input type="text" id="auth" name="author">
+  <!-- Jumbo-tron where the streams would be displayed,
+  I may change jumbo-tron to something simpler-->
+  <div class="feed-page">
+    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+      <ul class="orbit-container">
+        <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
+            Slide</span>&#9664;</button>
+        <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
+        <li class="orbit-slide is-active">
+          <img src="https://placehold.it/2000x750" height="50%" width="2000px">
+        </li>
+      </ul>
     </div>
 
-    <div class="form-group">
-      <label for="quo">Edit Post:</label>
-      <textarea id="quo" name="quote" rows="8" cols="40"></textarea>
-    </div>
+    <!-- Here you can create a post-->
 
-    <button type="submit">Add Post</button>
-  </form>
+    <h2 class="text-center">Add a Post!</h2>
 
+    <form class="create-form text-center">
 
-  <div class="row column text-center">
-    <h2>Recent Feeds</h2>
-    <div id="user.posts">
-      <div class="row">
-        <div class="col-md-12 blog-container">
+      <div class="form-group">
+        <label for="auth">Author:</label>
+        <input type="text" id="auth" name="author">
+      </div>
+
+      <div class="form-group">
+        <label for="quo">Edit Post:</label>
+        <textarea id="quo" name="quote" rows="8" cols="40"></textarea>
+      </div>
+
+      <a class="button" type="submit" id="addPost">Add Post</a>
+    </form>
+
+    <!-- A display of recent posts -->
+
+    <div class="row column text-center">
+      <h2>Recent Feeds</h2>
+      <div id="user.posts">
+        <div class="row">
+          <div class="col-md-12 blog-container">
+          </div>
         </div>
+      </div>
+    </div>
+
+    <!-- Start of suggestions tab -->
+
+    <div class="row column text-center" id="suggestions">
+      <h2>Suggestions</h2>
+      <hr>
+    </div>
+
+    <div class="row small-up-2 large-up-4">
+      <div class="column" id="Profile1">
+        <img class="thumbnail" src="./img/rust_sample.PNG">
+        <h5 id="user_name"></h5>
+        <p></p>
+        <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
+      </div>
+      <div class="column" id="Profile2">
+        <img class="thumbnail" src="./img/overwatch_sample.PNG">
+        <h5 id="user_name"></h5>
+        <p></p>
+        <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
+      </div>
+      <div class="column" id="Profile3">
+        <img class="thumbnail" src="./img/apex_sample.PNG">
+        <h5 id="user_name"></h5>
+        <p></p>
+        <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
+      </div>
+      <div class="column" id="Profile4">
+        <img class="thumbnail" src="./img/minecraft_sample.PNG">
+        <h5 id="user_name"></h5>
+        <p></p>
+        <a href="/twitch.tv/{{this.id}}" class="button expanded">User Page</a>
       </div>
     </div>
   </div>
 
-
-  <div class="row column text-center" id="suggestions">
-    <h2>Suggestions</h2>
-    <hr>
-  </div>
-
-  <div class="row small-up-2 large-up-4">
-    <div class="column" id="Profile1">
-      <img class="thumbnail" src="./img/rust_sample.PNG">
-      <h5 id="user_name"></h5>
-      <p></p>
-      <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
-    </div>
-    <div class="column" id="Profile2">
-      <img class="thumbnail" src="./img/overwatch_sample.PNG">
-      <h5 id="user_name"></h5>
-      <p></p>
-      <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
-    </div>
-    <div class="column" id="Profile3">
-      <img class="thumbnail" src="./img/apex_sample.PNG">
-      <h5 id="user_name"></h5>
-      <p></p>
-      <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
-    </div>
-    <div class="column" id="Profile4">
-      <img class="thumbnail" src="./img/minecraft_sample.PNG">
-      <h5 id="user_name"></h5>
-      <p></p>
-      <a href="/twitch.tv/{{this.id}}" class="button expanded">User Page</a>
-    </div>
-  </div>
-</div>
-
-<hr>
+  <hr>
 
 </div>
