messing with sequelize calls

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Welcome <span class="member-name"></span></h2>
-        <a href="#" class="button">Authorize Twitch</a>
+        <a type="submit" class="button twitch">Authorize Twitch</a>
       </div>
     </div>
   </div>
