--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,20 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quarantinee | Welcome</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-  <link rel="stylesheet" href="../public/stylesheets/style.css">
+  <link rel="stylesheet" type="text/css" href="../public/stylesheets/style.css">
 </head>
 
 <body>
   {{{ body }}}
 </body>
 
-<script>
-  $(document).foundation();
-</script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
   <script src="/js/login.js"></script>
   <script src="/js/members.js"></script>
   <script src="/js/signup.js"></script>
+  <script>
+  $(document).foundation();
+</script>
 
 </html>
