--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -37,25 +37,26 @@
 
   <div class="container" id="twitchAuth">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-3 text-center">
         <h2>Welcome <span class="member-name"></span></h2>
-        <a type="submit" class="button twitch">Authorize Twitch</a>
+        <a href="#" class="button">Authorize Twitch</a>
       </div>
     </div>
   </div>
 
-  <!-- Jumbo-tron where the streams would be displayed,
-  I may change jumbo-tron to something simpler-->
-  <div class="feed-style" id="top-streams">
-    <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
-      <ul class="orbit-container">
-        <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
-            Slide</span>&#9664;</button>
-        <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
-        <li class="orbit-slide is-active">
-          <img src="https://placehold.it/2000x750" height="50%" width="2000px">
-        </li>
-      </ul>
+  <div class="feed-style">
+    <div id="top-streams">
+      <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+        <ul class="orbit-container">
+          <button class="orbit-previous" aria-label="previous"><span class="show-for-sr">Previous
+              Slide</span>&#9664;</button>
+          <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next
+              Slide</span>&#9654;</button>
+          <li class="orbit-slide is-active">
+            <img src="https://placehold.it/2000x750" height="50%" width="2000px">
+          </li>
+        </ul>
+      </div>
     </div>
 
     <!-- Here you can create a post-->
@@ -95,33 +96,33 @@
 
     <!-- Start of suggestions tab -->
 
-    <div class="row column text-center" id="suggestions">
+    <div class="row column text-center">
       <h2>Suggestions</h2>
       <hr>
     </div>
     <!-- Profile tabs -->
 
-    <div class="row small-up-2 large-up-4">
+    <div class="row small-up-2 large-up-4" id="suggestions">
       <div class="column" id="Profile1">
-        <img class="thumbnail" src="./img/rust_sample.PNG">
+        <img class="thumbnail" src="./layouts/img/rust_sample.PNG">
         <h5 id="user_name"></h5>
         <p></p>
         <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
       </div>
       <div class="column" id="Profile2">
-        <img class="thumbnail" src="./img/overwatch_sample.PNG">
+        <img class="thumbnail" src="./layouts/img/overwatch_sample.PNG">
         <h5 id="user_name"></h5>
         <p></p>
         <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
       </div>
       <div class="column" id="Profile3">
-        <img class="thumbnail" src="./img/apex_sample.PNG">
+        <img class="thumbnail" src="./layouts/img/apex_sample.PNG">
         <h5 id="user_name"></h5>
         <p></p>
         <a href="/twitch.tv/${{this.id}}" class="button expanded">User Page</a>
       </div>
       <div class="column" id="Profile4">
-        <img class="thumbnail" src="./img/minecraft_sample.PNG">
+        <img class="thumbnail" src="./layouts/img/minecraft_sample.PNG">
         <h5 id="user_name"></h5>
         <p></p>
         <a href="/twitch.tv/{{this.id}}" class="button expanded">User Page</a>
