--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
         <h5>Welcome <span class="member-name"></span></h5>
-        <a href="#" class="button">Authorize Twitch</a>
+        <a class="button twitch">Authorize Twitch</a>
       </div>
     </div>
   </div>
