--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,14 +9,13 @@
                 <li><a href="#">Browse</a></li>
             </ul>
         </div>
-        <div class="top-bar-right">
+        <div class="top-bar-right" id="signupUser">
             <ul class="menu">
-                <li><a href="#">Log In</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="/signup">Sign Up</a></li>
             </ul>
         </div>
         <div class="top-bar-left">
-            <div class="search-input-animated">
+            <div class="search-input-animated" id-"searchbox">
                 <span class="searchbox-icon"><i class="fa fa-search"></i></span>
                 <input type="search" placeholder="Search" name="search" class="searchbox-input" required>
             </div>
@@ -40,7 +39,7 @@
                     </div>
                     <button type="submit" class="btn btn-default">Login</button>
                     <br />
-                    <p>Or sign up <a href="/">here</a></p>
+                    <p>Or sign up <a href="/signup">here</a></p>
                 </form>
             </div>
         </div>
