--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,12 +1,33 @@
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
+<div class="quarantineApp">
+
+  <!-- Start Top Bar -->
+  <div class="top-bar">
+    <div class="top-bar-left">
+      <ul class="menu" id="tabs">
+        <li class="menu-text"><img src="./img/vault_logo.png" alt="Vault Logo" height="30" width="30"></li>
+        <li><a href="/">Discover</a></li>
+        <li><a href="#">Browse</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right" id="loginUser">
+      <ul class="menu">
+        <li><a href="/login">Log In</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-left">
+      <div class="search-input-animated" id="searchbox">
+        <span class="searchbox-icon"><i class="fa fa-search"></i></span>
+        <input type="search" placeholder="Search" name="search" class="searchbox-input" required>
       </div>
     </div>
-  </nav>
+    <div class="top-bar-left" id="title-site">
+      <h2>Quarantinee</h2>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 col-md-offset-3" id="signup-form">
         <h2>Sign Up Form</h2>
         <form class="signup">
           <div class="form-group">
@@ -22,9 +43,16 @@
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
           <button type="submit" class="btn btn-default">Sign Up</button>
-        </form>
         <br />
         <p>Or log in <a href="/login">here</a></p>
+        </form>
       </div>
     </div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+    <script>
+        $(document).foundation();
+    </script>
