fixing handlebar links

--- a/views/partials/posts/post-block.handlebars
+++ b/views/partials/posts/post-block.handlebars
@@ -6,7 +6,7 @@
         <h2>{{this.dataValues.header}}</h2>
         <p>{{this.dataValues.body}}</p>
         {{#if this.dataValues.link}}
-        <a href={{this.dataValues.link}}></a>
+        <a href={{this.dataValues.link}}>{{this.dataValues.link}}</a>
         {{/if}}
     </div>
     <div>
