--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -13,7 +13,7 @@
       </div>
       <div class="top-bar-right" id="logoutUser">
         <ul class="menu">
-          <li><a href="/">Logout</a></li>
+          <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
       <div class="top-bar-left">
