--- a/views/partials/likes/like-block.handlebars
+++ b/views/partials/likes/like-block.handlebars
@@ -1,18 +1,17 @@
-<div class="row">
+<div class="row card">
     <div class="col-md-3">
         {{this.User.dataValues.email}}
     </div>
+    <div class="col-md-3">
+        <p>{{this.Post.dataValues.category}}</p>
+    </div>
     <div class="col-md-6">
-        <h2>{{this.Post.dataValues.header}}</h2>
-        <p>{{this.Post.dataValues.body}}</p>
+        <h2 class="mypost-header">{{this.Post.dataValues.header}}</h2>
+        <p class="mypost-body">{{this.Post.dataValues.body}}</p>
         {{#if this.Post.dataValues.link}}
         <a href={{this.Post.dataValues.link}}>{{this.Post.dataValues.link}}</a>
         {{/if}}
     </div>
     <div>
-    <button data-postid="{{this.Posr.dataValues.id}}" class="like">Like</button>
-    </div>
-    <div class="col-md-3">
-        <p>{{this.Post.dataValues.category}}</p>
     </div>
 </div>
