--- a/views/partials/posts/post-block.handlebars
+++ b/views/partials/posts/post-block.handlebars
@@ -1,18 +1,18 @@
-<div class="row">
+<div class="row card small-up-2 medium-up-3">
     <div class="col-md-3">
         {{this.User.dataValues.email}}
     </div>
+    <div class="col-md-3">
+        <p>{{this.dataValues.category}}</p>
+    </div>
     <div class="col-md-6">
-        <h2>{{this.dataValues.header}}</h2>
-        <p>{{this.dataValues.body}}</p>
+        <h2 class="mypost-header">{{this.dataValues.header}}</h2>
+        <p class="mypost-body">{{this.dataValues.body}}</p>
         {{#if this.dataValues.link}}
         <a href={{this.dataValues.link}}>{{this.dataValues.link}}</a>
         {{/if}}
     </div>
     <div>
     <button data-postid="{{this.dataValues.id}}" class="like">Like</button>
-    </div>
-    <div class="col-md-3">
-        <p>{{this.dataValues.category}}</p>
     </div>
 </div>
