--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
     <div class="top-bar">
         <div class="top-bar-left">
             <ul class="menu" id="tabs">
-                <li class="menu-text"><img src="./img/vault_logo.png" alt="Vault Logo" height="30" width="30  "></li>
+                <li class="menu-text"></li>
                 <li><a href="#">Discover</a></li>
                 <li><a href="#">Browse</a></li>
             </ul>
@@ -25,9 +25,9 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row login-card">
             <div class="col-md-6 col-md-offset-3" id="login-form">
-                <h2>Login Form</h2>
+                <h2 class="form-header">Login Form</h2>
                 <form class="login">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
@@ -37,7 +37,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="password-input" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn btn-default">Login</button>
+                    <button type="submit" class="btn btn-default" id="login-btn">Login</button>
                     <br />
                     <p>Or sign up <a href="/signup">here</a></p>
                 </form>
