--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,31 +1,37 @@
 <div class="quarantineApp">
   <!-- Begin nav bar -->
-    <div class="top-bar" id="nav-bar">
-      <div class="top-bar-left">
-        <ul class="menu" id="tabs">
-          <li class="menu-text"><button type="button" data-open="offCanvasLeft"><img src="vault_logo.png"
-                alt="Vault Logo" height="30" width="30">
-            </button>
-          </li>
-          <li><a href="/">Discover</a></li>
-          <li><a href="#">Browse</a></li>
-        </ul>
-      </div>
-      <div class="top-bar-right" id="logoutUser">
-        <ul class="menu">
-          <li><a href="/logout">Logout</a></li>
-        </ul>
-      </div>
-      <div class="top-bar-left">
-        <div class="search-input-animated" id="searchbox">
-          <span class="searchbox-icon"><i class="fa fa-search"></i></span>
-          <input type="search" placeholder="Search" name="search" class="searchbox-input" required>
+  <div class="top-bar" id="nav-bar">
+    <div class="top-bar-left">
+      <ul class="menu" id="tabs">
+        <li class="menu-text">
+        </li>
+        <li><a href="/members">Discover</a></li>
+        <li><a href="#">Browse</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right" id="logoutUser">
+      <ul class="menu">
+        <li><a href="/logout">Logout</a></li>
+      </ul>
+    </div>
+    <div class="top-bar-right" id="cocktail-app">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
+          <a href="https://phatorbs.github.io/GUIsProject1/" class="button success" id="cocktail-btn">Quarantini Mixtape
+            App</a>
         </div>
       </div>
-      <div class="top-bar-left" id="title-site">
-        <h2>Quarantinee</h2>
+    </div>
+    <div class="top-bar-left">
+      <div class="search-input-animated" id="searchbox">
+        <span class="searchbox-icon"><i class="fa fa-search"></i></span>
+        <input type="search" placeholder="Search" name="search" class="searchbox-input" required>
       </div>
     </div>
+    <div class="top-bar-left" id="title-site">
+      <h2>Quarantinee</h2>
+    </div>
+  </div>
   <!-- End nav bar-->
   <!--Start of App here-->
   <!-- Authorize Twitch-->
@@ -33,7 +39,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
         <h5>Welcome <span class="member-name"></span></h5>
-        <a class="button twitch">Authorize Twitch</a>
+        <a class="button twitch" id="twitch-btn">Authorize Twitch</a>
       </div>
     </div>
   </div>
@@ -52,107 +58,7 @@
         </ul>
       </div>
     </div>
-<!-- Here you can create a post From Seth: I based all the jquery here on classes so as long as class names stay the same it should still work-->
-    <!-- the post button only worked for me when I made into a button element Seth-->
-    <div id="postForm">
 
-        <h3 class="text-center">Add to our live feed, say anything!</h3>
-        <h5 class="text-center">Share your at home quarantine adventures!</h5>
-  
-        <form class="create-form text-center">
-  
-          <div class="form-group" id="authorId">
-            <label for="auth">Title:</label>
-            <input type="text" id="auth" class="header" name="author">
-          </div>
-  
-          <div class="form-group" id="editId">
-            <label for="quo">Edit Post:</label>
-            <textarea id="quo" class="body" name="quote" rows="8" cols="40"></textarea>
-          </div>
-  
-          <div class="form-group" id="editId">
-            <label for="quo">Category:</label>
-            <textarea id="qua" class="category" name="quote" rows="8" cols="40"></textarea>
-          </div>
-  
-          <div class="form-group" id="editId">
-            <label for="quo">Link:</label>
-            <textarea id="que" class="link" name="quote" rows="8" cols="40"></textarea>
-          </div>
-          {{!-- <button class="post">Post</button> --}}
-          <a class="button post" type="submit" id="postBtn">Add Post</a>
-  
-        </form>
-  
-      </div>
-  
-      <!-- A display of recent posts -->
-  
-      <div class="row column text-center">
-        <div class="row">
-          <div class="col-md-12" id="user.posts">
-             <!-- Handlebars for All Posts Feed Seth-->
-            <h2>Feed</h2>
-        <div class="col-md-12 post-style" id="recentFeed">
-          {{#each posts}}
-          {{> posts/post-block}}
-          <hr>
-          {{/each}}
-        </div>
-            {{!-- <ul>
-              {{#each feed}}
-              <li>
-                <p>
-                  {{this.dataValues.header}}. {{this.dataValues.body}}. {{this.dataValues.link}}
-  
-                <button data-postid="{{this.dataValues.id}}" class="like">Like</button>
-                </p>
-              </li>
-              {{/each}}
-            </ul> --}}
-              <!-- Handlebars for All User Likes  Seth-->
-              <h2>Likes</h2>
-        <div class="col-md-12 post-style" id="likedPosts">
-          {{#each likes}}
-          {{> likes/like-block}}
-          <hr>
-          {{/each}}
-        </div>
-            {{!-- <ul>
-              {{#each likes}}
-              <li>
-                <p>
-                  {{this.Post.dataValues.header}}. {{this.Post.dataValues.body}}. {{this.Post.dataValues.link}}
-                </p>
-              </li>
-              {{/each}}
-            </ul> --}}
-              <!-- Handlebars for All User Posts Seth -->
-              <h2>Your Posts</h2>
-              <br>
-        <div class="col-md-12 yourpost-style" id="yourPosts">
-          <div>
-          {{#each postHist}}
-          {{> postHist/mine-block}}
-          <hr>
-          {{/each}}
-          </div>
-        </div>
-            {{!-- <ul>
-              {{#each postHist}}
-              <li>
-                <p>
-                  {{this.dataValues.header}}. {{this.dataValues.body}}. {{this.dataValues.link}}
-  
-                <button data-postid="{{this.dataValues.id}}" class="delete">Delete</button>
-                </p>
-              </li>
-              {{/each}}
-            </ul> --}}
-          </div>
-        </div>
-      </div>
     <!-- Start of suggestions tab -->
     <div class="row column text-center">
       <h2>Top Twitch Streams</h2>
@@ -185,11 +91,11 @@
         <a href="https://www.twitch.tv/" class="button expanded stream" id="link4">Watch Stream</a>
       </div>
     </div>
-        <div class="row column text-center">
-    <h2>Top Twitch Games</h2>
+    <div class="row column text-center">
+      <h2>Top Twitch Games</h2>
       <hr>
     </div>
-        <div class="row small-up-2 large-up-4" id="games">
+    <div class="row small-up-2 large-up-4" id="games">
       <div class="column">
         <img class="thumbnail" src="/imgs/img/rust_sample.PNG" id="gamethumb1">
         <h5 id="game1"></h5>
@@ -209,6 +115,102 @@
         <img class="thumbnail" src="/imgs/img/rust_sample.PNG" id="gamethumb4">
         <h5 id="game4"></h5>
         <a href="https://www.twitch.tv/" class="button expanded stream" id="gamelink4">Browse Streams</a>
+      </div>
+    </div>
+    <!-- Here you can create a post From Seth: I based all the jquery here on classes so as long as class names stay the same it should still work-->
+    <!-- the post button only worked for me when I made into a button element Seth-->
+    <div id="postForm">
+
+      <h3 class="text-center">Add to our live feed, say anything!</h3>
+      <h5 class="text-center">Share your at home quarantine adventures!</h5>
+
+      <form class="create-form text-center">
+
+        <div class="form-group" id="authorId">
+          <label for="auth">Title:</label>
+          <input type="text" id="auth" class="header" name="author">
+        </div>
+
+        <div class="form-group" id="editId">
+          <label for="quo">Edit Post:</label>
+          <textarea id="quo" class="body" name="quote" rows="8" cols="40"></textarea>
+        </div>
+
+        <div class="form-group" id="editId">
+          <label for="quo">Category:</label>
+          <textarea id="qua" class="category" name="quote" rows="8" cols="40"></textarea>
+        </div>
+
+        <div class="form-group" id="editId">
+          <label for="quo">Link:</label>
+          <textarea id="que" class="link" name="quote" rows="8" cols="40"></textarea>
+        </div>
+        {{!-- <button class="post">Post</button> --}}
+        <a class="button post" type="submit" id="postBtn">Add Post</a>
+
+      </form>
+
+    </div>
+
+    <!-- A display of recent posts -->
+
+    <div class="text-center">
+      <div class="row" id="user.posts">
+        <!-- Handlebars for All Posts Feed Seth-->
+        <h2>Feed</h2>
+        <div id="recentFeed">
+          {{#each posts}}
+          {{> posts/post-block}}
+          <hr>
+          {{/each}}
+        </div>
+        {{!-- <ul>
+              {{#each feed}}
+              <li>
+                <p>
+                  {{this.dataValues.header}}. {{this.dataValues.body}}. {{this.dataValues.link}}
+  
+                <button data-postid="{{this.dataValues.id}}" class="like">Like</button>
+                </p>
+              </li>
+              {{/each}}
+            </ul> --}}
+        <!-- Handlebars for All User Likes  Seth-->
+        <h2>Likes</h2>
+        <div id="likedPosts">
+          {{#each likes}}
+          {{> likes/like-block}}
+          <hr>
+          {{/each}}
+        </div>
+        {{!-- <ul>
+              {{#each likes}}
+              <li>
+                <p>
+                  {{this.Post.dataValues.header}}. {{this.Post.dataValues.body}}. {{this.Post.dataValues.link}}
+                </p>
+              </li>
+              {{/each}}
+            </ul> --}}
+        <!-- Handlebars for All User Posts Seth -->
+        <h2>Your Posts</h2>
+        <div id="yourPosts">
+          {{#each postHist}}
+          {{> postHist/mine-block}}
+          <hr>
+          {{/each}}
+        </div>
+        {{!-- <ul>
+              {{#each postHist}}
+              <li>
+                <p>
+                  {{this.dataValues.header}}. {{this.dataValues.body}}. {{this.dataValues.link}}
+  
+                <button data-postid="{{this.dataValues.id}}" class="delete">Delete</button>
+                </p>
+              </li>
+              {{/each}}
+            </ul> --}}
       </div>
     </div>
   </div>
