--- a/views/partials/likes/like-block.handlebars
+++ b/views/partials/likes/like-block.handlebars
@@ -1,17 +1,16 @@
-<div class="row card">
-    <div class="col-md-3">
-        {{this.User.dataValues.email}}
-    </div>
-    <div class="col-md-3">
-        <p>{{this.Post.dataValues.category}}</p>
-    </div>
-    <div class="col-md-6">
-        <h2 class="mypost-header">{{this.Post.dataValues.header}}</h2>
-        <p class="mypost-body">{{this.Post.dataValues.body}}</p>
-        {{#if this.Post.dataValues.link}}
-        <a href={{this.Post.dataValues.link}}>{{this.Post.dataValues.link}}</a>
-        {{/if}}
-    </div>
-    <div>
+<div class="row">
+    <div class="card">
+        <div class="col-md-3">
+            <p>{{this.Post.dataValues.category}}</p>
+        </div>
+        <div class="col-md-6">
+            <h2 class="mypost-header">{{this.Post.dataValues.header}}</h2>
+            <p class="mypost-body">{{this.Post.dataValues.body}}</p>
+            {{#if this.Post.dataValues.link}}
+            <a href={{this.Post.dataValues.link}}>{{this.Post.dataValues.link}}</a>
+            {{/if}}
+        </div>
+        <div>
+        </div>
     </div>
 </div>
