--- a/views/partials/postHist/mine-block.handlebars
+++ b/views/partials/postHist/mine-block.handlebars
@@ -1,5 +1,5 @@
-<div class="row card">
-    <div class="col-md-6">
+<div class="row">
+    <div class="card">
         <div class="col-md-3">
             <p>{{this.dataValues.category}}</p>
         </div>
