--- a/views/partials/posts/post-block.handlebars
+++ b/views/partials/posts/post-block.handlebars
@@ -1,7 +1,4 @@
-<div class="row card small-up-2 medium-up-3">
-    <div class="col-md-3">
-        {{this.User.dataValues.email}}
-    </div>
+<div class="row card">
     <div class="col-md-3">
         <p>{{this.dataValues.category}}</p>
     </div>
@@ -12,7 +9,5 @@
         <a href={{this.dataValues.link}}>{{this.dataValues.link}}</a>
         {{/if}}
     </div>
-    <div>
     <button data-postid="{{this.dataValues.id}}" class="like">Like</button>
-    </div>
 </div>
