--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,7 +4,7 @@
   <div class="top-bar">
     <div class="top-bar-left">
       <ul class="menu" id="tabs">
-        <li class="menu-text"><img src="./img/vault_logo.png" alt="Vault Logo" height="30" width="30"></li>
+        <li class="menu-text"></li>
         <li><a href="/">Discover</a></li>
         <li><a href="#">Browse</a></li>
       </ul>
@@ -26,9 +26,9 @@
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row signup-card">
       <div class="col-md-6 col-md-offset-3" id="signup-form">
-        <h2>Sign Up Form</h2>
+        <h2 class="form-header">Sign Up Form</h2>
         <form class="signup">
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
@@ -42,17 +42,17 @@
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
-          <button type="submit" class="btn btn-default">Sign Up</button>
-        <br />
-        <p>Or log in <a href="/login">here</a></p>
+          <button type="submit" class="btn btn-default" id="signup-btn">Sign Up</button>
+          <br />
+          <p>Or log in <a href="/login">here</a></p>
         </form>
       </div>
     </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script type="text/javascript" src="js/login.js"></script>
-    <script>
-        $(document).foundation();
-    </script>
+  <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+  <script type="text/javascript" src="js/login.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
