--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -39,6 +39,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
         <h5>Welcome <span class="member-name"></span></h5>
+        <h2 id="time"></h2>
         <a class="button twitch" id="twitch-btn">Authorize Twitch</a>
       </div>
     </div>
