deleted userIndex.handlebars, added images, created main page on index.handlebars, added css stylesheet

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,13 +1,30 @@
-This is the landing page
+<div class="banner-text">
+    <ul>
+        <li><a href="/login">Login</a></li>
+        <li><a href="/signup">Sign Up</a></li>
+        {{!-- <li><a href="/members">Main</a></li> --}}
+    </ul>
 
-<button>
-    <a href="/login">Login</a>
-</button>
+    <h2>Welcome to Quarantinee</h2>
+    <p>An app designed to help get you through the days of
+        social distancing while keeping some of your sanity.
+        Post your top games, Netflix binges, or simply connect with
+        other Quarantinees like yourself.</p>
+    <h3><a href="/login">Login</a> or <a href="/signup">Sign Up</a> Here</h3>
+    <h3>Please check out the latest COVID-19 health information <a
+            href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">here.</a></h3>
+    <h3>Consider donating to No Kid Hungry <a href="https://www.nokidhungry.org/">here</a> to help give a meal to a kid in need.</h3>
+</div>
 
-<button>
-    <a href="/signup">Sign Up</a>
-</button>
-
-<button>
-    <a href="/members">members</a>
-</button>
+<div class="animation-area">
+    <ul class="box-area">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
