--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
         <div class="top-bar-left">
             <ul class="menu" id="tabs">
                 <li class="menu-text"></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="/members">Discover</a></li>
                 <li><a href="#">Browse</a></li>
             </ul>
         </div>
