--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -30,8 +30,8 @@
                 <h2 class="form-header">Login Form</h2>
                 <form class="login">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="email-input" placeholder="Email">
+                        <label for="exampleInputEmail1">Quarantinee Username</label>
+                        <input type="text" class="form-control" id="email-input" placeholder="glitterUnicorn">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
