--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -31,8 +31,9 @@
         <h2 class="form-header">Sign Up Form</h2>
         <form class="signup">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
+            <label for="exampleInputEmail1">Create A Quarantinee Username!
+            </label>
+            <input type="text" class="form-control" id="email-input" placeholder="e.g. glitterUnicorn">
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
