--- a/views/partials/likes/like-block.handlebars
+++ b/views/partials/likes/like-block.handlebars
@@ -7,7 +7,7 @@
             <h2 class="mypost-header">{{this.Post.dataValues.header}}</h2>
             <p class="mypost-body">{{this.Post.dataValues.body}}</p>
             {{#if this.Post.dataValues.link}}
-            <a href={{this.Post.dataValues.link}}>{{this.Post.dataValues.link}}</a>
+            <a href={{this.Post.dataValues.link}}>Link</a>
             {{/if}}
         </div>
         <div>
