--- a/views/partials/posts/post-block.handlebars
+++ b/views/partials/posts/post-block.handlebars
@@ -6,7 +6,7 @@
         <h2 class="mypost-header">{{this.dataValues.header}}</h2>
         <p class="mypost-body">{{this.dataValues.body}}</p>
         {{#if this.dataValues.link}}
-        <a href={{this.dataValues.link}}>{{this.dataValues.link}}</a>
+        <a href={{this.dataValues.link}}>Link</a>
         {{/if}}
         <p>Posted By: {{this.User.dataValues.email}}</p>
     </div>
