--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <!-- Start of suggestions tab -->
+    <!-- Start of suggestions tab adding a comment here for measure -->
     <div class="row column text-center">
       <h2>Top Twitch Streams</h2>
     </div>
