image madness deux

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -49,7 +49,7 @@
       <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
         <ul class="orbit-container">
           <li class="orbit-slide is-active">
-            <img id="banner-img" src="/imgs/img/game_banner2.PNG" height="50%" width="1000px">
+            <img id="banner-img" src="/imgs/img/game_banner2.png" height="50%" width="1000px">
           </li>
         </ul>
       </div>
