--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -3,7 +3,7 @@
   <div class="top-bar" id="nav-bar">
     <div class="top-bar-left">
       <ul class="menu" id="tabs">
-        <li class="menu-text"><img src="/imgs/img/vault_logo.PNG" alt="Vault Logo" height="30" width="30">
+        <li class="menu-text"><img src="/imgs/img/vault_logo2.png" alt="Vault Logo" height="30" width="30">
         </li>
         <li><a href="/members">Discover</a></li>
         <li><a href="#">Browse</a></li>
@@ -49,7 +49,7 @@
       <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
         <ul class="orbit-container">
           <li class="orbit-slide is-active">
-            <img id="banner-img" src="/imgs/img/game_banner2.PNG" height="50%" width="1000px">
+            <img src="/imgs/img/media-banner.png" height="300px" width="1000px" id="banner-img">
           </li>
         </ul>
       </div>
